--- a/content/reply-cc-2019.ipynb
+++ b/content/reply-cc-2019.ipynb
@@ -7,7 +7,7 @@
     "- title: Reply code challenge 2019\n",
     "- author: Alessandro Ogier\n",
     "- date: 2019-03-16\n",
-    "- category: pyhton\n",
+    "- category: python\n",
     "- tags: datascience,python,jupyter,cool"
    ]
   },
@@ -297,6 +297,13 @@
     "                yaxis=dict(showgrid=False, zeroline=False, showticklabels=False)))\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*some cells are hidden for the sake of brevity if you want to see how to do this graph then checkout pages repo [here](https://github.com/aogier/aogier.github.io/blob/source/content/reply-cc-2019.ipynb)*"
    ]
   },
   {
